fixes small screen overflow bug

--- a/src/data/popover/index.css
+++ b/src/data/popover/index.css
@@ -1,8 +1,11 @@
+html {
+  margin: 0;
+  padding: 0;
+}
 body {
   background-color: #fff;
   margin: 0;
-  padding: 10px 10px 5px 10px;
-  overflow: hidden;
+  margin: 7px;
   min-width: 500px;
 }
 body, table, button {
@@ -10,7 +13,11 @@ body, table, button {
   font-size: 12px;
   color: #444;
 }
-
+table {
+  vertical-align: middle;
+  border-collapse: collapse;
+  width: 100%;
+}
 h1 {
   font-size: 100%;
   padding: 10px 0 2px 0;
@@ -20,6 +27,7 @@ h1 {
 button {
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 3px;
+  margin: 0;
   cursor: pointer;
 }
 button:active {
@@ -37,11 +45,6 @@ button:active {
   text-indent: 15px;
 }
 
-#list {
-  width: 100%;
-  vertical-align: middle;
-  border-collapse: collapse;
-}
 #list td:first-child {
   width: 120px;
   text-indent: 5px;
@@ -56,7 +59,5 @@ button:active {
 }
 
 #toolbar {
-  width: 100%;
-  vertical-align: middle;
-  height: 36px;
+  margin-top: 10px;
 }
